# che-deploya

./: .gitignore  pyproject.toml
che_deploya/: __init__.py  cli.py  db.py  model.py  ops.py  redeploy.py  selection.py  spec.py  templating.py  validate.py
che_deploya/provision/: __init__.py  creds.py  database.py  systemd.py
tests/: test_build_cli.py  test_db_render.py  test_multi_spec.py  test_provision_systemd.py  test_redeploy.py  test_spec_types.py  test_templating.py  test_validate.py
tests/example/: cli.py  multi.py  spec.py
